--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: info@folklabs.com
 description: > # this means to ignore newlines until "baseurl:"
   Jekyll styleguide template by Folk Labs.
 baseurl: "/jekyll-styleguide" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+# url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: folklabs
 github_username:  folklabs
 
