Add webpages, templates, use of data, style changes. Test includes.

--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,8 @@ markdown: kramdown
 collections:
   patterns:
     output: true
-  atoms:
+  webpages:
     output: true
+
+pattern_includes:
+- search-bar
